--- a/index.html
+++ b/index.html
@@ -93,8 +93,16 @@
 	          </form>
 					</div>
 
+					<div style="height: 45px;"></div>
+
+					<iframe src="http://www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FLibrogamesLand%3Ffref%3Dts&amp;width=268&amp;colorscheme=light&amp;show_faces=true&amp;show_border=false&amp;connections=&amp;stream=true&amp;header=true&amp;locale=it_IT&amp;force_wall=false&amp;height=388" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:268px; height:388px;" allowtransparency="yes"></iframe>
+
 					<span style="line-height: 1.6;">
-					<h1 style="color: white; font-size: 1.5rem; margin-top: 100px;">Il Sondaggione!</h1>
+					<h1 style="color: white; font-size: 1.5rem; margin-top: 70px;">Cerca nel sito:</h1>
+					<div class="form-group d-flex">
+						<input type="text" class="form-control" placeholder="cerca...">
+					</div>
+					<h1 style="color: white; font-size: 1.5rem; margin-top: 50px;">Il Sondaggione!</h1>
 					<p>La pandemia sembra volgere finalmente al termina, come risponderà il mercato dei LG a questo progressivo ritorno alla normalità?
 					</p>
 					<form action="/index.php" method="post" name="apoll_vote_44" id="apoll_vote_44" style="color: #bbb">
