--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 					<div style="height: 45px;"></div>
 
-					<iframe src="http://www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FLibrogamesLand%3Ffref%3Dts&amp;width=268&amp;colorscheme=light&amp;show_faces=true&amp;show_border=false&amp;connections=&amp;stream=true&amp;header=true&amp;locale=it_IT&amp;force_wall=false&amp;height=388" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:268px; height:388px;" allowtransparency="yes"></iframe>
+					<iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FLibrogamesLand%3Ffref%3Dts&amp;width=268&amp;colorscheme=light&amp;show_faces=true&amp;show_border=false&amp;connections=&amp;stream=true&amp;header=true&amp;locale=it_IT&amp;force_wall=false&amp;height=388" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:268px; height:388px;" allowtransparency="yes"></iframe>
 
 					<span style="line-height: 1.6;">
 					<h1 style="color: white; font-size: 1.5rem; margin-top: 70px;">Cerca nel sito:</h1>
